welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: Int(1) does not take parameters
nbpas=nbpas+1();
             ^