welcome.lessons.welcome.variables.Variables.scala.code
var nbpas= 0
var dejafait= 1
while (!estSurBiscuit()){
avance();
nbpas=nbpas+1();
}